manifests/manifests/frontend-camera-sender/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soft-camera-sender
  namespace: plarail2021
spec:
  type: ClusterIP
  selector:
    app: soft-camera-sender
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
